08-containerized-openshift/sp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: shinyproxy
spec:
  type: ClusterIP
  selector:
    name: shinyproxy
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
