08-containerized-openshift/sp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: shinyproxy
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: shinyproxy
    weight: 100
  wildcardPolicy: None
